src/components/UserDash/BlacklistStyle.css
.display-cards-div {
   width: 75%;
   margin-left: 15em;

}

.main-div {
   height: 100%;
   width: 100%;
   position: absolute;
}

h5 {
  font-size: 30px;
}
 .wrapper {
   width: 300px;
   height: 300px;
   background: rgb(91, 146, 125);
   margin: auto;
   position: relative;
   overflow: hidden;
   display: inline-block;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0;
   transform: scale(0.95);
   transition: box-shadow 0.5s, transform 0.5s;
 }
 .wrapperBL {
  width: 300px;
  height: 300px;
  background: rgb(119, 18, 18);
  margin: auto;
  position: relative;
  overflow: hidden;
  display: inline-block;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0;
  transform: scale(0.95);
  transition: box-shadow 0.5s, transform 0.5s;
}
 .wrapper:hover {
   transform: scale(1);
   box-shadow: 5px 20px 30px rgba(94, 164, 167, 0.2);
 }
 .wrapperBL:hover {
  transform: scale(1);
  box-shadow: 5px 20px 30px rgba(94, 164, 167, 0.2);
}
 .wrapper .container {
   width: 100%;
   height: 100%;
 }
 .wrapperBL .container {
  width: 100%;
  height: 100%;
}
 .title-h5 {
   font-size: 35px;
 }
 .wrapper .container .top {
   padding-top: 30%;
   height: 80%;
   width: 100%;
   color: white;
   /* background: url(https://images.squarespace-cdn.com/content/v1/55cda908e4b0513a93e99588/1559768475510-KDO6QXL5ZL763YIS37ZV/ke17ZwdGBToddI8pDm48kC9qu2gvgDc1fHZgGjPXHQ5Zw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVGjw91RGhfjj5evWzHqs9oJjjqC-iiVlxKn7g29su4hW2bSd6kfRtgWHgNMDgGnmDY/hygiene-icon.png?format=300w) no-repeat center center;
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
   background-size: 100%; */
 }

 .wrapperBL .container .top {
  padding-top: 30%;
  height: 80%;
  width: 100%;
  color: white;
  /* background: url(https://images.squarespace-cdn.com/content/v1/55cda908e4b0513a93e99588/1559768475510-KDO6QXL5ZL763YIS37ZV/ke17ZwdGBToddI8pDm48kC9qu2gvgDc1fHZgGjPXHQ5Zw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVGjw91RGhfjj5evWzHqs9oJjjqC-iiVlxKn7g29su4hW2bSd6kfRtgWHgNMDgGnmDY/hygiene-icon.png?format=300w) no-repeat center center;
  -webkit-background-size: 100%;
  -moz-background-size: 100%;
  -o-background-size: 100%;
  background-size: 100%; */
}
 .wrapper .container .bottom {
   width: 200%;
   height: 20%;
   transition: transform 0.5s;
 }
 .wrapperBL .container .bottom {
  width: 200%;
  height: 20%;
  transition: transform 0.5s;
}
 .wrapper .container .bottom.clicked {
   transform: translateX(-50%);
 }

 .wrapperBL .container .bottom.clicked {
  transform: translateX(-50%);
}

 .wrapper .container .bottom h1 {
   margin: 0;
   padding: 0;
 }

 .wrapperBL .container .bottom h1 {
  margin: 0;
  padding: 0;
}
 .wrapper .container .bottom p {
   margin: 0;
   padding: 0;
 }

 .wrapperBL .container .bottom p {
  margin: 0;
  padding: 0;
}
 .wrapper .container .bottom .left {
   height: 100%;
   width: 50%;
   background: #f4f4f4;
   position: relative;
   float: left;
 }
 .wrapper .container .bottom .left .details {
   font-size: 9px;
   padding: 20px;
   color: white;
   float: left;
   width: calc(70% - 40px);
 }
 
 .wrapper .container .bottom .left .blacklist {
   float: right;
   width: calc(30% - 2px);
   height: 100%;
   background: #c26e6e;
   transition: background 0.5s;
   border-left: solid thin rgba(0, 0, 0, 0.1);
 }
 .wrapper .container .bottom .left .blacklist i {
   font-size: 9px;
   padding: 30px;
   color: #254053;
   transition: transform 0.5s;
 }
 .wrapper .container .bottom .left .blacklist:hover {
   background: rgb(168, 18, 18);
 }
 .wrapper .container .bottom .left .blacklist:hover i {
   transform: translateY(5px);
   color: #00394B;
 }
 .wrapper .container .bottom .right {
   width: 50%;
   background: #A6CDDE;
   color: white;
   float: right;
   height: 200%;
   overflow: hidden;
 }
 .wrapper .container .bottom .right .details {
   font-size: 9px;
   color: white;
   padding: 20px;
   float: right;
   width: calc(70% - 40px);
 }
 .wrapper .container .bottom .right .done {
   width: calc(30% - 2px);
   float: left;
   transition: transform 0.5s;
   border-right: solid thin rgba(255, 255, 255, 0.3);
   height: 50%;
 }
 .wrapper .container .bottom .right .done i {
   font-size: 15px;
   padding: 30px;
   color: white;
 }
 .wrapper .container .bottom .right .remove {
   width: calc(30% - 1px);
   clear: both;
   border-right: solid thin rgba(255, 255, 255, 0.3);
   height: 50%;
   background: #BC3B59;
   transition: transform 0.5s, background 0.5s;
 }
 .wrapper .container .bottom .right .remove:hover {
   background: #9B2847;
 }
 .wrapper .container .bottom .right .remove:hover i {
   transform: translateY(5px);
 }
 .wrapper .container .bottom .right .remove i {
   transition: transform 0.5s;
   font-size: 9px;
   padding: 30px;
   color: white;
 }
 .wrapper .container .bottom .right:hover .remove, .wrapper .container .bottom .right:hover .done {
   transform: translateY(-100%);
 }
 .wrapper .inside {
   z-index: 9;
   background: rgb(255, 255, 255);
   width: 140px;
   height: 140px;
   position: absolute;
   top: -70px;
   right: -70px;
   border-radius: 0px 0px 200px 200px;
   transition: all 0.5s, border-radius 2s, top 1s;
   overflow: auto;
 }  
 .wrapperBL .inside {
  z-index: 9;
  background: rgb(255, 255, 255);
  width: 140px;
  height: 140px;
  position: absolute;
  top: -70px;
  right: -70px;
  border-radius: 0px 0px 200px 200px;
  transition: all 0.5s, border-radius 2s, top 1s;
  overflow: auto;
} 
 .wrapper .inside .icon {
   position: relative;
   right: 20%;
   top: 85px;
   color: rgb(0, 0, 0);
   opacity: 1;
 }

 .wrapperBL .inside .icon {
  position: relative;
  right: 20%;
  top: 85px;
  color: rgb(0, 0, 0);
  opacity: 1;
}
 .wrapper .inside:hover {
   width: 100%;
   right: 0;
   top: 0;
   border-radius: 0;
   height: 80%;
 }

 .wrapperBL .inside:hover {
  width: 100%;
  right: 0;
  top: 0;
  border-radius: 0;
  height: 100%;
}
 .wrapper .inside:hover .icon {
   opacity: 0;
   right: 15px;
   top: 15px;
 }
 .wrapperBL .inside:hover .icon {
  opacity: 0;
  right: 15px;
  top: 15px;
}
 .wrapper .inside:hover .contents {
   opacity: 1;
   transform: scale(1.5);
   transform: translateY(0);
 }

 .wrapperBL .inside:hover .contents {
  opacity: 1;
  transform: scale(1.5);
  transform: translateY(0);
}
 .wrapper .inside .contents {
   padding: 0%;
   opacity: 0;
   transform: scale(0.5);
   transform: translateY(-200%);
   transition: opacity 0.2s, transform 0.8s;
 }
 .wrapperBL .inside .contents {
  padding: 0%;
  opacity: 0;
  transform: scale(0.5);
  transform: translateY(-200%);
  transition: opacity 0.2s, transform 0.8s;
}
 .wrapper .inside .contents table {
   text-align: left;
   width: 200px;

 }
 .wrapperBL .inside .contents table {
  text-align: left;
  width: 200px;
}
 .wrapper .inside .contents h1, .wrapper .inside .contents p, .wrapper .inside .contents table {
   color: rgb(129, 27, 27);
   font-size: 9px !important
 }
 .wrapperBL .inside .contents h1, .wrapper .inside .contents p, .wrapper .inside .contents table {
  color: rgb(129, 27, 27);
  font-size: 9px
}
 .wrapper .inside .contents p {
   font-size: 9px !important;
 }

 .blacklist-icon {
    position: relative;
    float: left;
    padding-top: 20%;
    height: 17%;
    width: 17%;
 }
 .blacklist-iconBL {
  position: relative;
  float: left;
  padding-top: 20%;
  height: 17%;
  width: 17%;
}

 .tooltiptext {
   visibility: hidden;
   width: 120px;
   background-color: black;
   color: #fff;
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
 }

 .tooltip:hover .tooltiptext {
   visibility: visible;
 }

 .title {
  height: 50px;
  color: rgb(0, 0, 0);
  background: linear-gradient(233deg, rgb(173, 219, 194), #fdfdfd, rgb(109, 194, 182));
  background-size: 600% 600%;
  animation-name: background-anim;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  overflow: auto
 }



 .estabs-div {
    height: 100vh;
    background-color: #fff;
    /* background: linear-gradient(233deg, rgb(152, 216, 238), #fdfdfd, #86dae6); */
    /* background-size: 600% 600%;
    animation-name: background-anim;
    animation-duration: 8s;
    animation-iteration-count: infinite;
    overflow: scroll */
}

.estab-name {
  color:rgb(141, 65, 65);
}
@keyframes background-anim {
  0%{background-position:92% 0%}
  50%{background-position:9% 100%}
  100%{background-position:92% 0%}  
}

